@@ -83,4 +83,7 @@
 ----
 1) Added b2c2b registarion support.
 
-   
+
+2014-02-17
+----
+1) Add option to choose status which will trigger the MAP.    
